Fixed main text overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,7 @@ body {
     position: -webkit-sticky;
     overflow: hidden;
     top: 0;
+    z-index: 1;
 }
 
 .navbar a {
@@ -65,7 +66,6 @@ body {
 .column {
     float: left;
     width: 32.75%;
-    position: relative;
     background-color: black;
     opacity: 0.5;
 }
@@ -98,5 +98,5 @@ body {
     position: relative;
     left: 435px;
     top: 11px;
-    opacity: 0.5;
+    opacity: 0.55;
 }
